Attempting more CSS to stop line breaks in code blocks on mobile

--- a/static/custom.css
+++ b/static/custom.css
@@ -20,4 +20,6 @@
   pre code {
     overflow-x: scroll;
     white-space: pre;
+    word-break: normal;
+    word-wrap: normal;
   }
